@@ -1,458 +1,3 @@
-# 常用工具及命令
-
-- `javac - java compiler java编译器`
-- `javadoc - 抽取Java 文档`
-  - 只能为 public protected 成员进行文档注释。
-  - 常见使用方法如下：
-  - `@see` 引用其他类。`@see classname / @see full-qualified-classname`
-  - `@version` 版本号
-  - `@author` 作者
-  - `@since` 代码的最早使用版本
-  - `@param` 修饰参数
-  - `@return` 返回值
-  - `@throws` 抛出的异常
-  - `@description` 表示方法废弃。已经被 `@Deprecated` 注解替代了
-
-Think in Java 阅读中，不断补充更新迭代笔记。
-
-# 第一部分 入门
-
-## 第二章 开发环境
-
-### 2.1 Java虚拟机
-
-- JVM：Java虚拟机。Java代码是运行在虚拟机上的。
-- 跨平台：代码运行在虚拟机上，不同版的OS（linux，windows，mac）对应不同的虚拟机。虚拟机本身不具备跨平台功能，每个OS下都有不同版本的虚拟机。【可理解为，各个OS下的虚拟机都是采用一套编码指令集，JVM是面向操作系统的，它负责把Class字节码解释成系统所能识别的指令并执行，同时也负责程序运行时内存的管理】
-
-### 2.2 JRE和JDK
-
-- JRE (Java Runtime Environment):Java程序的运行时环境，包含JVM和运行时所需要的核心类库
-- JDK(Java Development Kit):是Java程序开发的工具包，包含JRE和开发人员使用的工具。
-- 运行Java程序有jre就行，开发Java程序需要JDK。
-- Windows会把%CC% CC当作变量进行翻译
-
-## 第三章 入门程序
-
-### 3.1 程序开发步骤说明
-
-- 编写、编译、运行
-- Java源程序-->Java字节码文件-->JVM运行
-- Javac.exe 编译器 处理后 Java文件变成字节码文件
-- Java.exe 解释器 解释字节码的内容
-
-## 第四章 常量
-
-- 常量；在程序运行期间固定不变的量。
-- 常量的分类
-    - 字符串常量：凡是用双引号引起来的部分叫字符串常量。“asdfas”，可以是空串
-    - 整数常量：直接写上数字的，没有小数点。
-    - 浮点数常量：直接写上数字的，有小数点。
-    - 字符常量：用单引号引起来的 ‘A’，不能是空字符‘’。
-    - 布尔常量：只有两种取值。true，false
-    - 空常量：null，代表没有任何数据。不能直接用来打印。syso(null)是错的。
-
-## 第五章 变量&数据类型
-
-### 5.1 数据类型
-
-#### 5.1.1 基本数据类型
-
-- 整数
-    - byte  1个字节
-    - short 2个字节
-    - int   4个字节
-    - long  8个字节
-- 浮点数
-    - float     4个字节
-    - double    8个字节
-- 字符型
-    - char      2个字节
-- 布尔型
-    - boolean   1个字节
-
->**Java中默认类型：整型是int，浮点类型是double**
->想要精确的数字不推荐用double，用BigDemical吧。
-
-#### 5.1.2 引用数据类型
-
-> **字符串，数组，类，接口，Lambda**
-
-注意事项：
-
-- 字符串不是基本数据类型
-- 浮点数可能是一个近似值
-- 数据范围与字节数不一定相关。如float数据范围比long更大，但float是4字节，long是8字节
-- 浮点数默认是double，如果一定要用float，需要加上一个后缀F(推荐大写)
-- 如果是整数，默认为int，如果一定要用long，需要加上一个后缀L(推荐大写)
-
-### 5.2 变量
-
-- 变量：程序运行期间，内容可以发生改变的量
-- 编译原理，左值与右值
-
-### 5.3 强制数据类型转换 ▲
-
-- 强制类型转换一般不推荐使用，因为可能发生精度损失
-- byte，short，char这三种数据类型可发生数学运算。
-- byte，short，char在运算时都会被首先提升为int类型，然后再计算。
-
-```java
-byte num1 = 40;
-byte num2 = 50;
-//byte + byte --> int + int
-int result = num1 + num2;
-//如果用 byte接收 需要强转
-byte result = (byte)(num1 + num2);
-short同理
-```
-
-### 5.4 ASCII码表
-
-```shell
-0 -- 48
-A -- 65
-a -- 97
-```
-
-### 5.5 数字和字符的对照关系表（编码表）
-
-```java
-ASCII码表：American Standard Code for Information Interchange
-Unicode码表：万国码。也是数字和符号对照关系，开头0-127部分和ASCII完全一样，但是从128开始包含更多字符。
-```
-
-### 5.6 易错点
-
-byte short char 这些在计算的时候，会有类型提升，提升为 int 进行计算。
-
-```java
-public static void main(String[] args) {
-    byte a = 8;
-    byte b = 127;
-    b = a+b; // 会报错，提示你要进行强制类型转换。因为计算的时候，a和b会被提升为int类型，然后再进行计算，得到的结果也是int的，要把int类型的赋值给byte类型的变量需要进行强制类型转换。
-}
-```
-
-包装类型的比较
-
-```java
-public class Demo {
-    public static void main(String[] args) {
-        Integer b = new Integer(47);
-        Integer a = new Integer(47);
-        System.out.println(a == b);  // false 因为 a b 是不同的对象。
-        Integer c = Integer.valueOf(47);
-        Integer d = Integer.valueOf(47);
-        System.out.println(c == d); // true 因为 valueOf 创建对象是会先从 IntegerCache 缓存中找，有就返回缓存中的对象。
-        							// IntegerCache 是静态内部类。静态内部类在你使用的时候才会进行加载。注意：是说的静态内部类。
-    }
-}
-```
-
-静态内部类加载时机的测试。遇到new、getstatic、putstatic或invokestatic 这四条字节码指令执行的时候，如果类没有进行过初始化，则需要先触发其初始化。
-
-```java
-public class Demo {
-    // VM参数 -XX:+TraceClassLoading
-    public static void main(String[] args) {
-        int a = 0x2f;
-        System.out.printf("", TestClassLoading.d); // 调用静态内部类，控制台输出，它被加载了。不用静态内部类，它就不加载。
-    }
-
-    static class TestClassLoading {
-        static int d =10;
-        {
-            System.out.println("d");
-        }
-    }
-}
-```
-
-## 第六章 常用运算
-
-- 一元运算符：只需要一个数据就可以进行操作的运算符。
-
-    - 取反
-    - 自增
-    - etc
-
-- 二元运算符：需要两个数据才可以进行操作的运算符。
-
-    - 加法
-    - 减法
-    - 赋值
-
-- 三元运算符：需要三个数据才可以进行的运算符。
-
-    - 变量名称 = 条件判断?表达式A : 表达式B;
-    - int max = a > b ? a : b;
-
-- 拓展
-
-    - 对于byte/short/char三种类型来说，如果右侧赋值的数值没有超过范围，那么java编译器会自动隐含地为我们补上一个(byte)(short)(char).
-
-    ```
-    short = 5 + 8;(都要是常量才行)
-    等同于
-    short = 13; // 编译优化
-    先计算出的结果在进行赋值的
-    称为编译器的常量优化。
-    ```
-
-## 第七章 基本语法
-
-### 7.1 switch语句的使用
-
-> 基本语法
-
-```java
-public class Demo {
-    public static void main(String[] args) {
-        int a = 5;
-        switch (a) {
-            case 1:
-                System.out.println(1);
-            case 2:
-                System.out.println(2);
-            default:
-                System.out.println("over!");
-        }
-    }
-}
-```
-
-- 多个case后面的数值不可以重复
-- switch后面小括号中只能是下列数据类型
-    - 基本数据类型 byte/short/char/int
-    - 引用数据类型 String字符串、enum枚举
-
-> switch 中可以用 String 的原理
-
-```java
-public class TestSwitch {
-    public static void main(String[] args) {
-        String str = "dd";
-        switch (str) {
-            case "dd":
-                System.out.println("odk");
-                break;
-            case "cc":
-            default:
-                System.out.println("over!");
-        }
-    }
-}
-// 反编译后的代码
-public class TestSwitch {
-    public TestSwitch() {
-    }
-
-    public static void main(String[] args) {
-        String str = "dd";
-        byte var3 = -1;
-        switch(str.hashCode()) {
-        case 3168:
-            if (str.equals("cc")) {
-                var3 = 1;
-            }
-            break;
-        case 3200:
-            if (str.equals("dd")) {
-                var3 = 0;
-            }
-        }
-
-        switch(var3) {
-        case 0:
-            System.out.println("odk");
-            break;
-        case 1:
-        default:
-            System.out.println("over!");
-        }
-
-    }
-}
-```
-
-### 7.2 循环
-
-- for循环
-
-```java
-for( 一 ; 二 ; 四 ){
-    三
-}
-
-for(初始化表达1 ; 布尔表达式2 ; 步进表达式4){
-    循环体3
-}
-流程 1 2 3 4 --> 2 3 4 --> 2 3 4 -->直到2不满足为止。
-初始化语句只会执行一次。
-```
-
-- 增强for循环 foreach
-
-```java
-for(float x : f){
-    System.out.println(x);
-}
-将每一个f的元素赋值给x
-```
-
-- do-while
-
-```java
-do {
-    // doing something
-} while (condtion);
-```
-
-- break & continue
-
-break 跳出一层循环，continue 开启下一次循环。IDEA 点击关键字可以看到下一步会执行到那里。
-
-### 7.3 方法重载与重写
-
-- 方法调用的三种格式
-
-```java
-1.单独调用：方法名称(参数)
-2.打印调用：System.out.println(方法名称(参数))
-3.赋值调用：数据类型 变量名称 = 方法名称(参数)
-```
-
-- 方法重载 Overload ▲
-
-    - ==方法重载== ：指在同一个类中，允许存在一个以上的同名方法，只要它们的参数列表不同即可，与修饰符和返回值类型无关。
-    - 参数列表：个数不同，数据类型不同，顺序不同。
-    - 重载方法调用：JVM通过方法的参数列表，调用不同的方法。
-
-    ```java
-    以下参数顺序不一样也是重载！
-    public static void test(int a, short b){
-    
-    }
-    public static void test(short b,int a){
-    
-    }
-    ```
-
-    - 实际上，println就是一个被重载的函数
-
-- 方法重写 Overrider 
-
-    - 子类中出现和父类中一模一样的方法(包括返回值类型,方法名,参数列表）
-    - 1.重写的方法必须要和父类一模一样(包括返回值类型,方法名,参数列表)
-    - 2.重写的方法可以使用@Override注解来标识
-
-#### 7.3.1 重载的注意事项▲
-
-```java
-public static void f1(short i){
-    System.out.println("f1(short)");
-}
-public static void f1(byte i){
-    System.out.println("f1(byte)");
-}
-public static void f1(int i){
-    System.out.println("f1(int)");
-}
-public static void main(String[] args) {
-    short i = 5;
-    byte ii = 6;
-    int iii = 7;
-    f1(1);  // f1(int)
-    f1(1);	// f1(int)
-    f1(1);	// f1(int)
-    System.out.println("==========华丽的分割线==========");
-    f1(i);	// f1(short)
-    f1(ii);	// f1(byte)
-    f1(iii);// f1(int)
-}
-```
-
-### 7.4 数组
-
-#### 7.4.1 数组得初始化
-
-- 动态初始化 -- 指定数组长度
-
-```java
-int [] array = new int[300];
-```
-
-- 静态初始化 -- 指定数组内容
-
-```
-int [] array = new int[]{1,2,3,4,5,6}; // 标准格式
-int [] array = {1,2,3,4,5,6}; // 省略格式
-静态初始化不能拆分成
-int [] array;
-array = {1,2,34};
-这样是错误得
-```
-
-- 总结
-
-```
-动态初始化有默认值的过程，
-整型 默认为 0
-浮点 默认为 0.0
-字符 默认为 '\u0000'
-布尔 默认为 false
-引用 默认为 null
-
-静态初始化也有，不过系统自动马上将默认值替换为了大括号当中的具体数值。
-```
-
-#### 7.4.2 数组作为参数，返回值
-
-```java
-public static void cals(int[] arr){
-    xxxx
-}
-
-public static int[] calculate(int a,int b){
-    int [] array = {a,b};
-    return array;
-}
-
-数组作为参数，作为返回值其实都是数组的地址值
-```
-
-### 7.5 Java内存划分
-
-- 1.栈（stack）：存放的都是方法中的局部变量。方法的运行一定要在栈中运行
-    - 局部变量：方法的参数，或者方法{}内部的变量
-    - 作用域：一旦超出作用域，立刻从栈内存当中消失
-- 2.堆（heap）：凡是new出来的东西都在堆中
-    - 堆里面的数据都有默认值。默认值同上
-- 3.方法区（method area）：存储.class相关信息，包含方法的信息。
-- 4.本地方法栈（native method stack）：与操作系统相关
-- 5.寄存器（register）：与CPU相关
-
-----
-
-Java 的垃圾回收，对于提高对象的创建速度，具有明显的效果。Java从堆空间分配空间的速度，可以和其他语义从堆栈上分配空间的速度相媲美。在某些 Java VM 中，堆的实现截然不同，但是堆内存的分配可以看做：有一个堆指针，简单移动到尚未分配的区域，通过这种方式分配对象内存，其效率比得上 C++ 在栈上分配空间的效率。当然，在实际簿记工作方面，还有少量额外的开销，但是比不上查找可用空间的开销。（**Java GC 会清理出可用的空间，堆指针在空用空间中移动，这样就完成了内存的分配。而 C++ 需要遍历查找可用的内存，这个查找开销较大。这样一对比，会发现，Java 分配对象的速度并不比 C++慢**）
-
-Java 的 GC 工作的时候，一面回收内存空间，一面使堆中的对象紧凑排列。
-
------
-
-Java 的优化技术\=\=\=>JIT（Just-In-Time）：这种技术可以把重新全部或部分翻译成本地机器码，提升程序速度。当要装载某个类时，编译器会先找到其 `.class` 文件，然后将该类的字节码转入内存。此时有两种方式可供选择：
-
-- 一、让即时编译器编译所有代码，但是这种做法有两个缺陷：①这种加载动作散落在整个程序的生命周期内，累加起来要花很多时间，②会增加可执行代码的长度（字节码要比 JIT 展开后的本地机器码小很多），这将导致页面调度，从而降低程序速度。
-- 二、惰性评估，只在必要的时候编译代码。
-
-### 7.6 常见异常
-
-> ArrayIndexOfBoundsException
-
-> NullPointException
-
-> OutOfMemmory
-
 # 第二部分 基础
 
 类的初始化过程？？
@@ -3777,7 +3322,7 @@ public class myxx implements Comparator{
 
 ### Lambda 表达式
 
-- Lambda 表达式产生函数，而不是类。在 JVM（Java Virtual Machine，Java 虚 拟机）上，一切都是一个类。
+- Lambda 表达式产生函数，而不是类。在 JVM（Java Virtual Machine，Java 虚拟机）上，一切都是一个类。
 - 语法尽可能少，易于编写和使用。
 
 > **lambda 语法**
@@ -3876,7 +3421,7 @@ interface IntCall1 {
 
 类名或对象名，后面跟 :: ，然后 跟方法名称。`Math::abs`
 
-方法引用的赋值，要求函数的签名（参数类型和返回类型）想符合。 
+方法引用的赋值，要求函数的签名（参数类型和返回类型）相符合。 
 
 ```java
 package tij.chapter12;
@@ -4008,11 +3553,11 @@ public class UnboundMethodReference {
 }
 ```
 
-​		在 [1]，我们尝试把 X 的 f() 方法引用赋值给 MakeString。结果即使 make() 与 f() 具有相同的签名，编译也 会报 “invalid method reference”（无效方法引用）错误。这是因为实际上还有另一个隐 藏的参数：this。你不能在没有 X 对象的前提下调用 f()。因此，X :: f 表示未绑定的方法引用，因为它尚未 “绑定” 到对象。
+在 [1]，我们尝试把 X 的 f() 方法引用赋值给 MakeString。结果即使 make() 与 f() 具有相同的签名，编译也会报 “invalid method reference”（无效方法引用）错误。这是因为实际上还有另一个隐藏的参数：this。你不能在没有 X 对象的前提下调用 f()。因此，X :: f 表示未绑定的方法引用，因为它尚未 “绑定” 到对象。
 
-​		要解决这个问题，我们需要一个 X 对象，所以我们的接口实际上需要一个额外的 参数，如上例中的 TransformX。如果将 X :: f 赋值给 TransformX，在 Java 中是 允许的。我们必须做第二个心理调整——使用未绑定的引用时，函数式方法的签名（接 口中的单个方法）不再与方法引用的签名完全匹配。原因是：你需要一个对象来调用方 法。
+要解决这个问题，我们需要一个 X 对象，所以我们的接口实际上需要一个额外的参数，如上例中的 TransformX。如果将 X :: f 赋值给 TransformX，在 Java 中是允许的。我们必须做第二个心理调整——使用未绑定的引用时，函数式方法的签名（接 口中的单个方法）不再与方法引用的签名完全匹配。原因是：你需要一个对象来调用方 法。
 
-​		拿到未绑定的方法引用，并且调用它的 transform() 方法，将一个 X 类的对象传递给它，最后使得 x.f() 以某种方式被调用。 Java 知道它必须拿到第一个参数，该参数实际就是 this，然后调用方法作用在它之上。
+拿到未绑定的方法引用，并且调用它的 transform() 方法，将一个 X 类的对象传递给它，最后使得 x.f() 以某种方式被调用。 Java 知道它必须拿到第一个参数，该参数实际就是 this，然后调用方法作用在它之上。
 
 PS：方法引用只是把方法的引用赋值给了其他方法。我们赋值给接口，利用多态，让 **接口.方法** 可以调用赋值给他的那个方法，但是这个方法的调用需要一个对象！
 
@@ -4041,8 +3586,7 @@ interface ThreeArgs {
 }
 
 interface FourArgs {
-    void call4(
-            This athis, int i, double d, String s, char c);
+    void call4(This athis, int i, double d, String s, char c);
 }
 
 public class MultiUnbound {
@@ -4174,7 +3718,6 @@ public class ConsumerDemo {
         });
         // 函数式接口写法
         happy(23.2, money -> System.out.println("I get the money = " + money));
-        
     }
 
     // 本质con就是一个对象，我们需要传入一个对象，可以用匿名内部类实现或者lambda表达式
@@ -5535,18 +5078,345 @@ Numbered(13)
 
 #### 在 map 中组合流
 
-map，mapToInt 生成的都是 Stream 流。而不是元素。我们用 map，想要产生一个元素流，而实际却产生了一个元素流的流。
+map，mapToInt 生成的都是 Stream 流。而不是元素。我们用 map，想要产生一个元素流，而实际却产生了一个元素流的流。（大概就是 Stream(Stream)，套娃）
 
-flatMap() 做了两件事：将产生流的函数应用在每个元素上（与 map() 所做的相 同），然后将每个流都扁平化为元素，因而最终产生的仅仅是元素。
+flatMap() 做了两件事：将产生流的函数应用在每个元素上（与 map() 所做的相同），然后将每个流都扁平化为元素，因而最终产生的仅仅是元素。
 
 - flatMap(Function)：当 Function 产生流时使用。 
 - flatMapToInt(Function)：当 Function 产生 IntStream 时使用。 
 - flatMapToLong(Function)：当 Function 产生 LongStream 时使用。 
 - flatMapToDouble(Function)：当 Function 产生 DoubleStream 时使用。
 
-## 第十三章 异常
+> map 与 flatMap 的区别
 
-## 第十四章 注解
+```java
+public class StreamOfStreams {
+    public static void main(String[] args) {
+        // 产生了一个 Stream 流， forEach 逐个打印流中的元素
+        Stream.of(1, 2, 3, 4).forEach(System.out::println);
+        System.out.println("===============");
+
+        // 产生了一个 Stream 流 的流。 of 一层 Stream，map 里又后，为 1 2 3 4 又套了一层流。流的流。
+        // 所以最后打印的是流中的元素（元素流的流）
+        Stream.of(1, 2, 3, 4).map(i -> Stream.of("Gonzo", "Fozzie", "Beaker")).forEach(System.out::println);
+        System.out.println("===============");
+
+        // 如何解决呢？flat 展平
+        Stream.of(1, 2, 3, 4).flatMap(i -> Stream.of("Gonzo", "Fozzie", "Beaker")).forEach(System.out::println);
+    }
+}
+```
+
+```shell
+1
+2
+3
+4
+===============
+java.util.stream.ReferencePipeline$Head@7ba4f24f
+java.util.stream.ReferencePipeline$Head@3b9a45b3
+java.util.stream.ReferencePipeline$Head@7699a589
+java.util.stream.ReferencePipeline$Head@58372a00
+===============
+Gonzo
+Fozzie
+Beaker
+Gonzo
+Fozzie
+Beaker
+Gonzo
+Fozzie
+Beaker
+Gonzo
+Fozzie
+Beaker
+```
+
+> 功能需求：从一个整数流开始，然后使用每一个整数去创建更多的随机数。
+
+- `concat()` 以参数顺序组合两个流
+- `IntStream.concat（x,IntStream.of(-1)）`随机 Integer 流的末尾添加一个 -1 作为标记。
+
+```java
+public class StreamOfRandoms {
+    static Random random = new Random(45);
+
+    public static void main(String[] args) {
+        Stream.of(1, 2, 3, 4, 5)
+                .flatMapToInt(i -> IntStream.concat(random.ints(0, 100).limit(3), IntStream.of(-1)))
+                .forEach(System.out::print);
+    }
+}
+```
+
+### Optional  类
+
+在流中，我们如何表示这是一个空流？
+
+- 在流中防止 null
+- 使用 Optional 
+
+Optional ：可作为流元素 的持有者，即使查看的元素不存在也能友好地提示我们。
+
+#### Optional 对象
+
+将对象的结果，包装在 Optional 中
+
+- findFirst() 返回一个包含第一个元素的 Optional 对象，如果流为空则返回 Optional.empty 
+- findAny() 返回包含任意元素的 Optional 对象，如果流为空则返回 Optional.empty 
+- max() 和 min() 返回一个包含最大值或者最小值的 Optional 对象，如果流为空 则返回 Optional.empty
+
+> Optional 判空的示意代码
+
+- `Stream.<String>empty()` 创建空流 
+- `Stream<String> s = Stream.empty()` 创建空流
+
+```java
+public class OptionalsFromEmptyStreams {
+    public static void main(String[] args) {
+        System.out.println(Stream.<String>empty()
+                .findFirst());
+        System.out.println(Stream.<String>empty()
+                .findAny());
+        System.out.println(Stream.<String>empty()
+                .max(String.CASE_INSENSITIVE_ORDER));
+        System.out.println(Stream.<String>empty()
+                .min(String.CASE_INSENSITIVE_ORDER));
+        System.out.println(Stream.<String>empty()
+                .reduce((s1, s2) -> s1 + s2));
+        System.out.println(IntStream.empty()
+                .average());
+    }
+}
+```
+
+流为空时，会获得一个 Optional.empty 对象，而不是抛出异常。Optional 拥有 `toString()` 方法可以用于展示有用信息。
+
+> Optional 的两个基本用法
+
+```java
+public class OptionalBasics {
+    static void test(Optional<String> optString) {
+        if (optString.isPresent()) // 检查元素是否存在
+            System.out.println(optString.get());
+        else
+            System.out.println("Nothing inside!");
+    }
+
+    public static void main(String[] args) {
+        test(Stream.of("Epithets").findFirst());
+        test(Stream.<String>empty().findFirst());
+    }
+}
+/*
+Epithets
+Nothing inside!
+*/
+```
+
+Option 感觉没啥用，后期再说。
+
+### 终止操作
+
+> **匹配与查找**
+
+| 方法名                       | 描述                     |
+| ---------------------------- | ------------------------ |
+| `allMatch(Predicate p)`      | 检查是否匹配所有元素     |
+| `anyMatch(Predicate p)`      | 检查是否至少匹配一个元素 |
+| `noneMatch(Predicate p)`     | 检查是否没有匹配所有元素 |
+| `findFirst` 返回Optional容器 | 返回第一个元素           |
+| `findAny`                    | 返回流中的任意元素       |
+| `count`                      | 返回流中元素总个数       |
+| `max(Comparator c)`          | 返回流中最大值           |
+| `min(Comparator c)`          | 返回流中最小值           |
+| `forEach(Consumer c)`        | 内部迭代                 |
+
+> **归约操作**
+
+| 方法名                               | 描述                                                  |
+| ------------------------------------ | ----------------------------------------------------- |
+| `reduce(T identity, BinaryOperator)` | 将流中的元素反复结合起来，得到一个值。返回T           |
+| `reduce(BinaryOperator b)`           | 将流中的元素反复结合起来，得到一个值。返回Optional<T> |
+
+map和reduce的连接称为map-reduce。
+
+```java
+public class ReduceDemo {
+    public static void main(final String[] args) {
+        fn1();
+    }
+
+    public static void fn1() {
+        final List<Integer> asList = Arrays.asList(1, 23, 4, 5, 6, 74, 234, 5, 45);
+        final Integer reduce = asList.stream().reduce(0, Integer::sum);
+        System.out.println(reduce);
+        Optional<Integer> reduce2 = asList.stream().reduce(Integer::sum);
+        System.out.println(reduce2.get());
+
+    }
+}
+```
+
+> **收集**：如收集List，Set，Map
+
+| 方法                   | 描述                                                         |
+| ---------------------- | ------------------------------------------------------------ |
+| `collect(Collector c)` | 将流转为其他形式。接收一个Collector接口的实现，用于给Stream中元素做汇总的方法 |
+
+Collector接口中方法的实现决定了如何对流执行收集操作。
+
+Collectors实现类提供了很多静态方法，可以方便地创建常见收集器实例。
+
+| 方法           | 返回类型             | 作用                                      |
+| -------------- | -------------------- | ----------------------------------------- |
+| toList         | List<T>              | 把流中元素收集到List                      |
+| toSet          | Set<T>               | 把流中元素收集到Set                       |
+| toCollection   | Collection<T>        | 把流中元素收集到创建的集合                |
+| counting       | Long                 | 计算流中元素的个数                        |
+| summingInt     | Integer              | 对流中元素的整数属性求和                  |
+| averagingInt   | Double               | 计算流中元素Integer属性的平均值           |
+| summarizingInt | IntSummaryStatistics | 收集流中的Integer属性的统计值。如平均值！ |
+
+> 示例代码
+
+```java
+public class Colle {
+    public static void main(final String[] args) {
+        final List<Integer> asList = Arrays.asList(1, 23, 4, 5, 78, 34, 456, 678, 34456, 234);
+        Stream<Integer> stream = asList.stream();
+        List<Integer> collect = stream.collect(Collectors.toList());
+        collect.forEach(System.out::println);
+    }
+}
+```
+
+### 终端操作
+
+获取流的最终结果，终端操作后无法再继续向后传递流。
+
+#### 数组
+
+- toArray()：将流转换成适当类型的数组。
+- toArray(generator)：在特殊情况下，生成自定义类型的数组。
+
+```java
+public class RandInts {
+    public static void main(String[] args) {
+        int[] ints = new Random(47).ints(0, 1000).limit(100).toArray();
+        Arrays.stream(ints);
+    }
+}
+
+```
+
+#### 循环
+
+- forEach(Consumer) 常见如 System.out::println 作为 Consumer 函数。无序操作，仅在引入并行流时才有意义。
+  - parallel()：可实现多处理器并行操作。实 现原理为将流分割为多个（通常数目为 CPU 核心数）并在不同处理器上分别执行操作。
+- forEachOrdered(Consumer)：保证 forEach 按照原始流顺序操作。
+
+```java
+public class ForEach {
+    static final int SZ = 8;
+
+    public static void main(String[] args) {
+        int[] ints = new Random(47).ints(0, 1000).limit(SZ).toArray();
+        Arrays.stream(ints).forEach(n -> System.out.format("%d \t", n));
+        System.out.println();
+        Arrays.stream(ints).parallel().forEach(n -> System.out.format("%d \t", n));
+        System.out.println();
+        Arrays.stream(ints).parallel().forEachOrdered(n -> System.out.format("%d \t", n));
+    }
+}
+```
+
+```shell
+258 	555 	693 	861 	961 	429 	868 	200 	
+429 	961 	868 	200 	861 	555 	693 	258 	
+258 	555 	693 	861 	961 	429 	868 	200 
+```
+
+#### 集合
+
+- `collect(Collector)：`使用 Collector 收集流元素到结果集合中。
+- `collect(Supplier, BiConsumer, BiConsumer)：`同上，第一个参数 Supplier 创 建了一个新的结果集合，第二个参数 `BiConsumer` 将下一个元素收集到结果集 合中，第三个参数 `BiConsumer` 用于将两个结果集合合并起来。
+
+#### 组合
+
+- reduce(BinaryOperator)：使用 BinaryOperator 来组合所有流中的元素。因为流可能为空，其返回值为 Optional。 
+- reduce(identity, BinaryOperator)：功能同上，但是使用 identity 作为其组 合的初始值。因此如果流为空，identity 就是结果。
+- reduce(identity, BiFunction, BinaryOperator)：更复杂的使用形式（暂不介 绍），这里把它包含在内，因为它可以提高效率。通常，我们可以显式地组合 map() 和 reduce() 来更简单的表达它。
+
+```java
+class Frobnitz {
+    int size;
+
+    Frobnitz(int sz) {
+        size = sz;
+    }
+
+    @Override
+    public String toString() {
+        return "Frobnitz(" + size + ")";
+    }
+
+    // Generator:
+    static Random rand = new Random(47);
+    static final int BOUND = 100;
+
+    static Frobnitz supply() {
+        return new Frobnitz(rand.nextInt(BOUND));
+    }
+}
+
+public class Reduce {
+    public static void main(String[] args) {
+        Stream.generate(Frobnitz::supply)
+                .limit(10)
+                .peek(System.out::println)
+            // 当 fr0 的 size 值小于 50 的时候，将 fr0 作为结果，否则将序列中的下一个元素即 fr1 作为结果
+                .reduce((fr0, fr1) -> fr0.size < 50 ? fr0 : fr1)
+                .ifPresent(System.out::println);
+    }
+}
+/*
+Frobnitz(58)
+Frobnitz(55)
+Frobnitz(93)
+Frobnitz(61)
+Frobnitz(61)
+Frobnitz(29)
+Frobnitz(68)
+Frobnitz(0)
+Frobnitz(22)
+Frobnitz(7)
+Frobnitz(29)
+*/
+```
+
+## 第十五章 容器深入研究
+
+学习散列机制，如何编写 `hashCode` 和 `equals`，容器为什么会有不同版本的实现，如何进行选择；学习通用工具类和特殊类。
+
+### 容器分类
+
+Java SE5 添加了
+
+- Queue接口
+  - `PriorityQueue`
+- `ConcurrentMap` 接口及其实现 `ConcurrentHashMap`，并发编程部分的，用于多线程机制。
+- `CopyOnWriteArrayList` 和 `CopyOnWriteSet`，用于多线程 
+- `EnumSet` 和 `EnumMap`，为使用 `enum` 而设计的 Set 和 Map的特殊实现。
+- `Collections` 类中的多个便利方法
+
+### 填充容器
+
+## 第十六章 异常
+
+Java 的基本理念是 “结构不佳的代码不能运行”。
+
+异常往往能降低错误处理代码的复杂度。如果不使用异常，那么就必须检查特定的 错误，并在程序中的许多地方去处理它。
 
 ## 第十五章 IO流
 
@@ -8161,1500 +8031,4 @@ public class Demo {
     }
 }
 ```
-
-
-
-# 第三部分 加强
-
-## 第一章 枚举
-
-### 1.1 枚举的使用Demo
-
-下面看一段骚气的代码
-
-```java
-public String judge(String str){
-    if("AAA".equals(str)){
-        return "AAA";
-    }else if("BBB".equals(str)){
-        return "BBB";
-    }else if("CCC".equals(str)){
-        return "CCC";
-    }else if("DDD".equals(str)){
-        return "DDD";
-    }
-}
-```
-
-- 条件一多 就要该源码【扩展性弱】，有没有解决办法
-- 代码看起来不优雅，有没有解决办法
-
-**枚举！**
-
-> **第一版，用枚举替代if else**
-
-```java
-// 直接用枚举
-enum RoleOperation1 {
-    ADMIN_POWER,
-    NORMAL_POWER,
-    SUPER_POWER
-}
-
-// 因为有返回值 所以这样定义
-enum RoleOperation2 {
-    ADMIN_POWER() {
-        @Override
-        public String toString() {
-            return "Admin power";
-        }
-    },
-    NORMAL_POWER() {
-        @Override
-        public String toString() {
-            return "Normal power";
-        }
-    },
-    SUPER_POWER() {
-        @Override
-        public String toString() {
-            return "Super power";
-        }
-    }
-}
-
-// 因为有统一的方法，所以用接口定义规则
-interface Operation {
-    String op();
-}
-
-//  漂亮的枚举代码，虽然看起来长，复杂，但是拓展性特别强！
-// 下面就是见证奇迹的时刻，优雅地用枚举替代if else。
-public enum RoleOperation implements Operation {
-    ADMIN_POWER() {
-        @Override
-        public String op() {
-            return "Admin power";
-        }
-    },
-    NORMAL_POWER() {
-        @Override
-        public String op() {
-            return "Normal power";
-        }
-    },
-    SUPER_POWER() {
-        @Override
-        public String op() {
-            return "Super power";
-        }
-    }
-}
-```
-
-```java
-public class Demo1 {
-    // 如此优雅的代码！！
-    // 还有用工厂模式 策略模式的。感觉都不如枚举来的优雅。
-    public String judge(String role) {
-        return RoleOperation.valueOf(role).op();
-    }
-}
-```
-
-### 1.2 枚举的常用方法
-
-| values()    | 以数组形式返回枚举类型的所有成员 |
-| ----------- | -------------------------------- |
-| valueOf()   | 将普通字符串转换为枚举实例       |
-| compareTo() | 比较两个枚举成员在定义时的顺序   |
-| ordinal()   | 获取枚举成员的索引位置           |
-
-```java
-package org.example.enumeration;
-
-import org.junit.jupiter.api.Test;
-
-// 枚举中一些常用方法
-public class SomeFunc {
-    @Test
-    public void func1() {
-        Color[] values = Color.values();
-        for (Color c : values) {
-            System.out.println(c);
-        }
-    }
-
-    @Test
-    public void func2() {
-        //  将普通字符串实例转换为枚举
-        Color blue = Color.valueOf("BLUE");
-        System.out.println(blue);
-    }
-
-    @Test
-    public void func3() {
-        System.out.println(Color.BLUE.ordinal());
-    }
-
-
-    /**
-     *     public final int compareTo(E o) {
-     *         Enum<?> other = (Enum<?>)o;
-     *         Enum<E> self = this;
-     *         if (self.getClass() != other.getClass() && // optimization
-     *             self.getDeclaringClass() != other.getDeclaringClass())
-     *             throw new ClassCastException();
-     *         return self.ordinal - other.ordinal;
-     *     }
-     */
-    @Test
-    public void func4() {
-        // RED 和 BLUE比较， RED小于BLUE 返回负数 ；equals返回0；大于返回 正数
-        System.out.println(Color.RED.compareTo(Color.BLUE)); // -1
-        System.out.println(Color.RED.compareTo(Color.GREEN));// -2
-    }
-
-    @Test
-    public void func() {
-        System.out.println(Color.RED);
-        // output RED
-    }
-
-}
-
-enum Color {
-    RED, BLUE, GREEN
-}
-```
-
-## 第二章 比较对象
-
-**Comparator和Comparable**
-
-Comparable接口/ Comparator接口
-
-- Comparator  函数式接口 jdk1.8引入
-- Comparable 普通接口
-
-## 第三章 单元测试
-
-### 3.1 单元测试的优点
-
-保证的程序代码的正确性【语法上了逻辑上】。
-
-### 3.2单元测试的使用
-
-@Test
-
-- @Before 无论Test是否出现异常，都会执行 【初始化资源】
-- @After 无论Test是否出现异常，都会执行 【销毁资源】
-
-```java
-public class JunitDemo {
-    private OutputStream outputStream;
-
-    @Before
-    public void init() throws FileNotFoundException {
-        System.out.println("IO 流初始化完毕了");
-        outputStream = new FileOutputStream("junit.txt");
-    }
-
-    @Test
-    /**
-     * 单元测试判断数据的正确性
-     * 一般用Assert里面的方法
-     */
-    public void fn1(){
-        // 断言不为null  不是null则成功
-        Assert.assertNotNull(outputStream);
-    }
-
-    @After
-    public void destory() throws IOException {
-        System.out.println("IO 流关闭了");
-        outputStream.close();
-    }
-}
-```
-
-### 3.3 单元测试原理
-
-## 第四章 反射
-
-### 4.1 反射概述
-
-反射可以把类的各个组成部分封装为其他对象。
-
-反射，Java的高级特性，流行的框架基本都是基于反射的思想写成的。
-
-Java反射机制是在程序的运行过程中，对于任何一个类，都能够知道它的所有属性和方法；对于任意一个对象，都能够知道它的所有属性和方法，**<span style="color:green">这种动态获取信息以及动态调用对象方法的功能称为Java语言的反射机制。</span>**
-
-Java反射机制主要提供了以下这几个功能：
-
-- 在运行时判断任意一个对象所属的类
-- 在运行时构造任意一个类的对象
-- 在运行时判断任意一个类所有的成员变量和方法
-- 在运行时调用任意一个对象的方法
-
-### 4.2 反射的基本操作
-
-#### 4.2.1 获取成员变量
-
-- `File[] getFileds()` // **获得所有公有字段，包括继承的**
-- `Filed getFiled(String name)` // 获取指定name的
-- `Filed[] getDeclaredFileds() `// 获取该类自己声明的，包括私有
-- `Filed[] getDeclaredFileds(String name)` // 获取指定名称的
-
-#### 4.2.2 获取构造方法
-
-- `Constructor<?>[] getConstructors()` // 获得所有公有构造器
-
-- `Constructor<?> getConstructor(Class<?>...parameterTypes)` //获得指定参数的公有构造器
-- `Constructor<?>[]getDeclaredConstructors()`// 获得所有私有构造器
-- `Constructor<T>[]getDeclaredConstructors()`//  得指定参数的构造器【包括public~~~private 】
-
-#### 4.2.3 获取成员方法
-
-- `Method[] getMethods()` // **获得所有public修饰的方法，包括继承的**
-
-- `Method getMethod(String name, Class<?>... parameterTypes)` // 获得指定名称和参数类型的public修饰的方法
-- `Method[] getDeclaredMethods()` //获得所有的私有方法
-- `Method getDeclaredMethod(String name, Class<?>... parameterTypes)` // 获得指定名称和参数类型的方法
-
-#### 4.2.4 获取类名
-
-- `String getName()` // 获得类全名`com.bbxx.junits.Son`
-
-#### 4.2.5 几个重要的类
-
-> **Class类**
-
-每定义一个`java` `class` 实体都会产生一个Class对象。我们编写一个类，编译完成后，在生成的 `.class`文件中，就会产生一个Class对象，这个Class对象用于表示这个类的类型信息。Class中没有公共构造器，即Class对象不能被实例化。
-
-> **Field类**
-
-Field类提供类或接口中单独字段的信息，以及对单独字段的动态访问。
-
-> **Method类**
-
-```java
-invoke(Object obj, Object... args)
-```
-
-> **`ClassLoader`类**
-
-**<span style="color:green">ClassLoader类加载器！类加载器用来把类（class）装载进JVM的。ClassLoader使用的双亲委派模型来搜索加载类的，这个模型也就是双亲委派模型。</span>**
-
-**`ClassLoader`的类继承图如下：**
-
-<img src="D:\69546\Documents\pics\JavaStrengthen\classLoader.png" style="float:left">
-
-### 4.3 动态代理
-
-#### 4.3.1 作用
-
-运行时，动态创建一组指定的接口的实现类对象！（在运行时，创建实现了指定的一组接口的对象）
-
-动态代理对比其他方法增强方式
-
-<img src="D:\69546\Documents\pics\JavaStrengthen\proxy.png" style="float:left">
-
-#### 4.3.2 基本Demo
-
-```java
-interface A{    
-}
-interface B{
-}
-Object o = 方法(new Class[]{ A.class, B.class })
-o 它实现了A和B两个接口！
-```
-
-```java
-Object proxyObject = Proxy.newProxyInstance(ClassLoader classLoader, Class[] interfaces, InvocationHandler h);
-```
-
-- 方法的作用：动态创建实现了interfaces数组中所有指定接口的实现类对象！
-- `ClassLoader`：类加载器！
-    - 它是用来加载器的，把.class文件加载到内存，形成Class对象！
-- `Class[ ] interfaces`：指定要实现的接口们。
-- `InvocationHandler`：代理对象的所有方法（个别不执行，一般`nativate`方法不会执行，但是`hashCode`却会执行，好奇怪）都会调用`InvocationHadnler`的`invoke()`方法
-- 动态代理的作用
-    - 最终是学习`AOP`（面向切面编程），它与装饰者模式有点相似，它比装饰者模式更灵活（潜在含义，动态代理更难！）
-
-**动态代理基本Demo**
-
-```java
-interface IBase {
-    public void say();
-
-    public void sleep();
-
-    public String getName();
-}
-```
-
-```java
-public class Person implements IBase {
-    public void say() {
-        System.out.println("hello");
-    }
-
-    public void sleep() {
-        System.out.println("sleep");
-    }
-
-    public String getName() {
-        return "getName";
-    }
-}
-```
-
-```java
-public class ProxyDemo1 {
-    public static void main(String[] args) {
-
-        Person person = new Person();
-        // 获得类加载器
-        ClassLoader classLoader = person.getClass().getClassLoader();
-        // 获得被代理对象实现的接口
-        Class[] interfaces = person.getClass().getInterfaces();
-        // 实例化一个处理器 用于增强方法用的
-        InvocationHandler h = new InvocationHandler() {
-            @Override
-            public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-                method.invoke(person, args);
-                return null;
-            }
-        };
-        IBase p = (IBase) Proxy.newProxyInstance(classLoader, interfaces, h);
-        // 获得代理类的名称 com.sun.proxy.$Proxy0
-        System.out.println(p.getClass().getName());
-        p.say();
-    }
-}
-```
-
-#### 4.3.3 invoke解释
-
-```java
-public Object invoke(Object proxy, Method method, Object[] args)
-```
-
-**这个invoke什么时候被调用？**
-
-- 在调用代理对象所实现接口中的方法时被调用！
-
-**参数解释**
-
-- `Object proxy`：当前对象，即代理对象！在调用谁的方法！
-- `Method method`：当前被调用的方法（目标方法）
-- `Object [ ] args`：实参
-- 返回的是方法的返回值。
-
-<img src="D:\69546\Documents\pics\JavaStrengthen\invoke_explain.png" style="float:left">
-
-----
-
-```java
-public class ProxyDemo2 {
-    public static void main(String[] args) {
-        Person person = new Person();
-        ClassLoader classLoader = person.getClass().getClassLoader();
-        Class[] interfaces = person.getClass().getInterfaces();
-        System.out.println(interfaces.length);
-        InvocationHandler h = new InvocationHandler() {
-            @Override
-            public Object invoke(Object proxy, Method method, Object[] args) throws Throwable {
-                Object retVal = method.invoke(person, args);
-                 // 这个返回了，方法才有返回值 
-                return retVal; 
-            }
-        };
-        IBase p = (IBase) Proxy.newProxyInstance(classLoader, interfaces, h);
-        p.say();
-        // invoke返回null的话，这里的输出就是null
-        System.out.println(p.getName());
-    }
-}
-```
-
-### 4.4 模拟`AOP`
-
-`Spring AOP`，感受一下什么叫增强内容可变！
-
-- `ProxyFactory` 代理工厂
-- `IBeforeAdvice` 前置通知接口【方法执行前调用前置】
-- `IAfterAdvice` 后置通知接口【方法执行后调用后置】
-- `IWaiter` 服务员类接口
-- `ManWaiterImple` 具体的服务员类【对他进行增强】
-
-## 第五章 注解
-
-**注解也叫元数据**。是一种代码级别的说明，JDK1.5引入的特性，与类，接口，枚举是在同一层次。**可声明在包，类，字段，方法，局部变量，方法参数等的前面**，对这些元素进行说明。
-
-**作用分类：**
-
-1.代码分析，通过代码里标识的元数据对代码进行分析【结合反射技术】
-
-2.编译检查，通过代码里标识的元数据让编译器能够实现机泵的编译检查【Override】
-
-3.编写文档，通过代码里标识的元数据生成文档【生成文档doc文档】
-
-### 5.1 内置注解
-
-- `Override`：检测被标注的是否继承自父类
-- `Deprecated`：表示方法过时
-- `SuppressWarnings`：压制警告
-    - 一般传递参数all
-
-### 5.2 自定义注解
-
-> **元注解`public @interface annotationName{}`**
-
-反编译发现，本质就是一个接口。
-
-```java
-import java.lang.annotation.Annotation;
-
-public interface Annotation extends Annotation {
-}
-```
-
-#### 5.2.1 属性的返回值
-
-**基本数据类型	String	枚举	注解	以上类型的数组**
-
-#### 5.2.2 赋值问题
-
-设置默认值`String sex() default "1";`
-
-使用注解，数组类型的赋值 `str={xx,xx,xx}`，若数组中只有一个，大括号可省略。回忆Spring中注解
-
-```
-* 基本数据类型
-		* String
-		* 枚举
-		* 注解
-		* 以上类型的数组
-```
-
-### 5.3 元注解
-
-> **用于描述注解的注解**
-
-`@Target`：描述注解的位置
-
-- `ElementType`取值
-    - TYPE：可以作用于类上
-    - METHOD：可以作用于方法上
-    - FIELD：可以作用于成员变量上
-
-`@Retention`：描述注解是被保留的阶段
-
-`@Retention(RetentionPolicy.RUNTIME)`：当前被描述的注解，会保留到class字节码文件中，并被`JVM`读取到
-
-`@Documented`：描述注解是否被抽取到api文档中
-
-`@Inherited`：描述注解是否被子类继承
-
-### 5.4 注解的解析
-
-```java
-@Target(ElementType.TYPE)
-@Retention(RetentionPolicy.RUNTIME)
-public @interface Pro {
-    String className();
-    String methodName();
-}
-
-@Pro(className = "com.bbxx.Demo1",methodName = "show1")
-public class RefelectDemo {
-    public static void main(String[] args) throws ClassNotFoundException, NoSuchMethodException, InvocationTargetException, IllegalAccessException, InstantiationException {
-        /**
-         * 解析注解
-         */
-        Class<RefelectDemo> refelectDemoClass = RefelectDemo.class;
-        Pro annotation = refelectDemoClass.getAnnotation(Pro.class);
-        String s = annotation.className();
-        String s1 = annotation.methodName();
-        Class<?> aClass = Class.forName(s);
-        Object o = aClass.newInstance();
-        Method declaredMethod = aClass.getDeclaredMethod(s1);
-        declaredMethod.setAccessible(true);
-        declaredMethod.invoke(o);
-    }
-}
-```
-
-## 第六章 类加载器
-
-### 6.1 分类
-
-`ClassLoad`分类
-
-- 引导 类加载器----->负责加载类库 rt中的jar 【最高，Bootstrap】
-- 扩展 类加载器----->负责加载扩展jar包  ext下的都是扩展jar
-- 系统 类加载器----->应用下的类，包含开发人员写的类和三方jar包【最低】
-
-`ClassLoad`有个双亲委派模型，会先问父   类加载器/上级类加载器，向上级委托，没有就自己加载，没找到就抛出`ClassNotFound`。永远不会出现类库中的类被系统加载器加载，应用下的类 被引导加载。
-
-委托父加载器加载，父可以加载就让父加载。父无法加载时再自己加载。
-
-- 可避免类的重复加载，父类加载器已经加载了该类时，就没必要子`ClassLoader`再加载一次了/
-- 考虑到安全因素，`java`核心`api`中定义类型不会被随意替换。
-
-### 6.2 类加载的顺序
-
-```java
-class MyApp{
-    public static void main(String[]args){ // 系统加载
-        // 也由系统加载
-        A a = new A(); 
-        // 也由系统加载 （从系统开始匹配，最终会委托上去， ...由引导加载）
-        String s = new String();
-    }
-}
-
-class String{ // 引导加载， String类，类库中的
-    private Integer i;// 直接引导加载，毕竟无法委托了！
-}
-```
-
-其实还得分线程，每个线程都有一个当前的类加载器来负责加载类。
-
-### 6.3 流程
-
-基础阶段 **了解**，中级阶段 **熟悉**，高级阶段，**不清楚**。
-
-继承`ClassLoader`类完成自定义类加载器。自定义类加载器一般是为了加载网络上的类，class在网络中传输，为了安全，那么class需要加密，需要自定义类加载器来加载（对class做解密工作）
-
-`ClassLoader`加载类都是通过==`loadClass()`==方法来完成的。`loadClass()`方法的工作流程如下：
-
-- 调用==`findLoadedClass()`==方法查看该类是否已经被加载过了，如果该类没有加载过，那么这个方法返回null。
-- 判断`findLoadedClass()`返回的是否为null,如果不是null那么直接返回，可避免同一个类被加载两次。
-- 如果`findLoadedClass()`返回的是null, 那么就启动代理模式（委托机制），即调用上级的`loadClass()`方法，获取上级的方法是`getParent()`，当然上级可能还有上级，这个动作就一直向上走；（==双亲委派机制==，tomcat破坏了双亲委派模型）
-- 如果`getParent().loadClass()`返回的不是null，这说明上级加载成功了，那么就加载结果；
-- 如果上级返回的是null，说明需要自己出手，`loadClass()`方法会调用本类的`findClass()`方法来加载类
-- 这说明我们只需要重写`ClassLoader`的`findClass()`方法，这就可以了！如果重写了`loadClass()`方法覆盖了代理模式！
-
-我们要自定义一个类加载器，只需要继承`ClassLoader`类。然后重写它的`findClass()`方法即可。在`findClass()`中我们需要完成如下的工作！
-
-- 找到class文件，把它加载到一个byte[]中
-- 调用`defineClass()`方法，把byte[]传递给这个方法即可
-
-### 6.4 自定义类加载器
-
->**文件类加载器**
-
-```java
-public class MyClassLoader extends ClassLoader {
-    private String directory;
-
-    public MyClassLoader(String _directory, ClassLoader paraent) {
-        super(paraent);
-        this.directory = _directory;
-    }
-
-    protected Class<?> findClass(String name) throws ClassNotFoundException {
-        try {
-            // 把类名转为目录
-            String file = directory + File.separator + name.replace(".", File.separator) + ".class";
-            // 构建输入流
-            InputStream fis = new FileInputStream(file);
-            ByteArrayOutputStream baos = new ByteArrayOutputStream();
-            byte[] buf = new byte[1024];
-            int len = -1;
-            while ((len = fis.read(buf)) != -1) {
-                baos.write(buf, 0, len);
-            }
-            byte[] byteArray = baos.toByteArray();
-            fis.close();
-            baos.close();
-
-            return defineClass(name, byteArray, 0, byteArray.length);
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-}
-```
-
-热部署，越过双亲委派，就是不用`loadClass` 用`findClass`
-
-> **复杂例子**
-
-```java
-package org.example.classloader;
-
-import java.io.File;
-import java.io.FileInputStream;
-import java.lang.reflect.Method;
-
-/**
- * 类加载器学习
- * 注意maven中的单元测试只能写在 test下面！
- * 字节码文件请自己生成一个 然后调用对应的方法哦！！
- */
-public class ClassLoaderDemo extends ClassLoader {
-
-    // 类加载器的地盘，指明加载那个地方的class文件
-    private String classpath;
-
-    public ClassLoaderDemo() {
-    }
-
-    public ClassLoaderDemo(String classpath) {
-        this.classpath = classpath;
-    }
-
-    public static void main(String[] args) throws Exception {
-        ClassLoaderDemo classLoaderDemo = new ClassLoaderDemo();
-        classLoaderDemo.fun2();
-    }
-
-    // 执行字节码的非静态方法
-    public void fun1() throws Exception {
-        ClassLoaderDemo classLoaderDemo = new ClassLoaderDemo("D:\\");
-        Class<?> clazz = classLoaderDemo.loadClass("org.example.classloader.ClassLoaderTest");
-        // loaderSay是一个非静态方法，需要一个实例调用
-        Method loaderSay = clazz.getMethod("loaderSay");
-        ClassLoaderTest o = (ClassLoaderTest) clazz.newInstance();
-        // 非静态方法需要一个实例进行调用
-        loaderSay.invoke(o);
-    }
-
-
-    // 执行字节码的静态方法
-    public void fun2() throws Exception {
-        ClassLoaderDemo classLoaderDemo = new ClassLoaderDemo("D:\\");
-        Class<?> clazz = classLoaderDemo.loadClass("org.example.classloader.ClassLoaderTest");
-        // loaderSay是一个非静态方法，需要一个实例调用
-        Method loaderSay = clazz.getMethod("loaderStaticFunction");
-        // 静态方法不用实例
-        String result = (String) loaderSay.invoke(null);
-        System.out.println(result);
-    }
-
-
-    // 重写这个方法即可
-    @Override
-    public Class<?> findClass(String name) throws ClassNotFoundException {
-        try {
-            // 自定义的方法，通过类名找到class文件，把文件加载到一个字节数组中
-            byte[] datas = getClassData(name);
-            if (datas == null) {
-                throw new ClassNotFoundException("类没有找到：" + name);
-            }
-            return this.defineClass(name, datas, 0, datas.length);
-
-        } catch (ClassNotFoundException e) {
-            e.printStackTrace();
-            throw new ClassNotFoundException("类找不到:" + name);
-        }
-    }
-
-    private byte[] getClassData(String name) {
-        // 把名字换成文件夹的名字
-        name = name.replace(".", "\\") + ".class";
-        File classFile = new File(classpath, name);
-        System.out.println(classFile.getAbsoluteFile());
-        return readClassData(classFile);
-    }
-
-    private byte[] readClassData(File classFile) {
-        if (!classFile.exists()) return null;
-        byte[] bytes = null;
-        try {
-            FileInputStream fis = new FileInputStream(classFile);
-            bytes = fis.readAllBytes();
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-        return bytes;
-    }
-}
-```
-
-### 6.5 Tomcat类加载器
-
-tomcat提供了两种类加载器。
-
-**第一种 服务器类加载器**
-
-- ${CATALINA-HOME}\lib\，tomcat类加载器，它负责加载下面的类
-
-**第二种 应用类加载器**
-
-- ${CONTEXT}\WEB-INF\lib  
-- ${CONTEXT}\WEB-INF\classes
-
-**总结**
-
-tomcat破坏了双亲委派模型
-
-引导
-
-扩展
-
-系统
-
-服务器类加载器：先自己动手，然后再去委托
-
-应用类加载器：先自己动手，然后再去委托
-
-<img src="D:\69546\Documents\pics\JavaStrengthen\tomcat_classLoader.png" style="float:left">
-
-## 第七章 并发
-
-### 7.1 注意
-
-> **不要调用Thread类或Runnable对象的run方法**。直接调用run方法会在同一个线程中执行----不会启动新的线程。调用`Thread.start()`方法会创建一个执行run方法的新线程。
-
-> **线程的六种状态**
-
-- New：新建
-- Runnable：可运行【可能在运行 或 准备运行】
-- Blocked：【阻塞】
-- Waiting：【等待】
-- Timed waiting：【具有指定等待时间的等待线程的线程状态。一个线程处于定时等待状态，这是由于调用了以下方法中的一种，具有指定的正等待时间】
-- Terminated：【终止】
-
-```java
-//Thread内部的枚举类
-public enum State {
-    NEW,
-    RUNNABLE,
-    BLOCKED,
-    WAITING,
-    TIMED_WAITING,
-    TERMINATED;
-}
-```
-
-> **lock和unlock，unlock要放在finally中，确保锁可以被释放。**
-
-> **可重入锁，获得锁的方法（代码）可以调用持有相同锁的方法**
-
-> **`ReentrantLock()`**
-
-- 公平锁和非公平锁。
-- 公平锁倾向于选择等待时间长的线程，这种策略可能严重影响性能。
-- 一般选择非公平锁。
-
-> <span style="color:green">**Condition，用`ReentrantLock()`的实例对象获得Condition对象**</span>
-
-- `await()` 将该线程放在这个条件的等待集中，<span style="color:green">**并放弃锁！**</span>
-- `singalAll()` 激活等待这个条件的所有线程，把他们从等待集中移出，让他们重新成为可运行的线程！
-- `singal()` 从该条件的等待集中随机选取一个从等待集中移出，让他们重新成为可运行的线程！
-- <span style="color:green">**用if做条件判断不合适，存在虚假唤醒的问题，用while。【`JDK`注释中有说明】**</span>
-
-> **synchronized**
-
-> **线程就是一个单独的资源类，没有任何附属的操作。**
-
-> **线程局部变量 `ThreadLocal`**
-
-- `ThreadLocal.withInitial()`为函数式编程提供的方法
-
-**Unsafe类啊！**
-
-## 第八章 网络编程
-
-采用windows的`telent`工具作为客户端进行发起连接。
-
-### 8.1 入门
-
-> **Client**
-
-```java
-/**
- * 测试服务器连接
- */
-public class SocketTest {
-
-    public static void fun1() {
-        // jdk 7 try catch用法
-        try (var socket = new Socket("time-a.nist.gov", 13)) {
-            var scanner = new Scanner(socket.getInputStream());
-            while (scanner.hasNextLine()) {
-                System.out.println(scanner.nextLine() + "==");
-            }
-        } catch (Exception e) {
-            e.printStackTrace();
-        }
-    }
-
-    public static void fun2() throws UnknownHostException, UnsupportedEncodingException {
-        String host = "www.bilibili.com";
-        InetAddress[] localhosts = InetAddress.getAllByName(host);
-        for (InetAddress tmp : localhosts) {
-            System.out.println(tmp.getHostAddress());
-            System.out.println(tmp);
-        }
-    }
-
-    public static void fun3() throws IOException {
-        Socket socket = new Socket();
-        socket.connect(new InetSocketAddress("time-a.nist.gov", 13), 10000);
-        Scanner scanner = new Scanner(socket.getInputStream());
-        // Scanner类不是很熟悉
-        while (scanner.hasNextLine()) {
-            System.out.println(scanner.nextLine());
-        }
-    }
-
-    public static void main(String[] args) throws IOException {
-        fun3();
-    }
-}
-```
-
-> **Server**
-
-```java
-public class EchoServer {
-    /**
-     * 服务器端的 inputStream 和 outPutStream
-     * inPutStream 输入流，输入到Server
-     * outPutStream 输出流，输出到client
-     *
-     * @param args
-     * @throws IOException
-     */
-    public static void main(String[] args) throws IOException {
-        ServerSocket serverSocket = new ServerSocket(8189);
-        Socket accept = serverSocket.accept();
-        // 控制台读入数据
-        Scanner in = new Scanner(accept.getInputStream(), StandardCharsets.UTF_8);
-        // 输出 IO流还是不熟悉 类的组合太复杂了
-        // PrintWriter out = new PrintWriter(new OutputStreamWriter(accept.getOutputStream(), StandardCharsets.UTF_8), true);
-        OutputStreamWriter out = new OutputStreamWriter(accept.getOutputStream(), StandardCharsets.UTF_8);
-        out.write("connected");
-        out.flush();
-
-        boolean done = false;
-        while (!done && in.hasNextLine()) {
-            // 控制台输入数据
-            String line = in.nextLine();
-            // 输出到客户端
-            out.write("Echo:" + line);
-            out.flush();
-            if ("BYE".equals(line.trim())) done = true;
-        }
-    }
-}
-```
-
----
-
-## 第九章 Servlet3.0
-
-- 注解
-- 文件上传
-- 异步处理 需要 `asyncSupported=true`，有过滤器的话，过滤器也要设置`asyncSupported = true`
-
-使用型特性就是在保护你的Java职业生涯。
-
-### 9.1 注解替代`xml`
-
-```java
-@WebServlet("/index.do")
-public class IndexServlet extends HttpServlet {
-    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-
-    }
-
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        request.setAttribute("data", fakeData());
-        request.getRequestDispatcher("/demo.jsp").forward(request, response);
-    }
-
-    public ArrayList<User> fakeData() {
-        ArrayList<User> users = new ArrayList<>();
-        users.addAll(Arrays.asList(
-                new User("111", "111"),
-                new User("222", "222"),
-                new User("333", "333")));
-        users.forEach(System.out::println);
-        return users;
-    }
-}
-```
-
-### 9.2 异步响应
-
-异步响应如果不设置编码格式 可能会导致异步失败（有乱码，异步可能会失败；主要是告诉它响应文本是什么。）测试了一下，的确是设置好响应文本即可。
-
-异步响应如果过滤器这些东西没有设置为异步状态，也会导致异步失败
-
-```text
- * 类型 异常报告
- * 消息 当前链的筛选器或servlet不支持异步操作。
- * 描述 服务器遇到一个意外的情况，阻止它完成请求
- 
- 错误的原因就是过滤器没有设置  asyncSupported = true
-```
-
-**代码案例**
-
-```java
-@WebServlet(urlPatterns = "/async", asyncSupported = true)
-public class AsyncServlet extends HttpServlet {
-    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        doGet(request, response);
-    }
-
-    private char[] getOutPutChar(String str) {
-        return str == null ? "   2020年 10月24日，祝各位程序员节日快乐！ 2020-1024=996，想不到吧！".toCharArray() : null;
-    }
-
-    protected void doGet(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        // 不加设置响应的类型的话，就无法异步。
-        response.setContentType("text/html");
-        AsyncContext asyncContext = request.startAsync(request, response);
-        threadOutPut(asyncContext, response, getOutPutChar(null));
-    }
-
-    /**
-     * @param asyncContext
-     * @param response
-     * @param outputStr    需要输出给浏览器的数据
-     */
-    private void threadOutPut(AsyncContext asyncContext, HttpServletResponse response, char[] outputStr) {
-        asyncContext.start(() -> {
-            try {
-                PrintWriter print = response.getWriter();
-                TimeUnit.MILLISECONDS.sleep(600);
-                for (char c : outputStr) {
-                    TimeUnit.MILLISECONDS.sleep(180);
-                    print.print(c); print.flush();
-                }
-                asyncContext.complete();
-            } catch (Exception e) {
-                e.printStackTrace();
-            } finally {
-                asyncContext.complete();
-            }
-        });
-    }
-}
-```
-
-### 9.3 文件上传
-
-> **几个重要的API**
-
-```java
-- request.getPart("file_name") // 获得文件对象Part
-- part.getName() // 获得文件上传时的 name <input name="xx"> 中的name
-- part.getSize() // 获得文件的大小
-- part.getSubmittedFileName() // 获得提交的文件的名字。上传的是 demo.txt 那么得到的就是 demo.txt
-- part.getInputStream(); // 获得文件输入流。
-
-获取文件输入流后，在用输出流 存入磁盘。
-```
-
-**文件上传的简单Demo**
-
-文件上传用绝对路径【公司】
-
-```java
-@WebServlet("/upload")
-@MultipartConfig // 表示它支持文件上传
-public class FileUpload extends HttpServlet {
-    @Override
-    protected void doPost(HttpServletRequest request, HttpServletResponse response) throws ServletException, IOException {
-        Part part = request.getPart("file_name");
-        System.out.println(part.getName());
-        System.out.println(part.getSize());
-        System.out.println(part.getSubmittedFileName());
-        InputStream inputStream = part.getInputStream();
-        // new FileOutputStream("filename") 这样是无法定位位置的，不能正常存储？
-        //D:\citespace.projects.txt
-        FileOutputStream fos = new FileOutputStream("D://" + part.getSubmittedFileName());
-        // citespace.projects.txt
-        // FileOutputStream fos = new FileOutputStream(part.getSubmittedFileName());
-        byte[] bys = new byte[1024];
-        int len = 0;
-        while ((len = inputStream.read(bys)) != -1) {
-            fos.write(bys, 0, len);
-        }
-        inputStream.close();
-        fos.close();
-    }
-}
-```
-
-```html
-<html>
-<head>
-    <title>Title</title>
-</head>
-<body>
-    enctype 说明有文件要提交过去
-<form action="/Tomcat/upload" method="post" enctype="multipart/form-data">
-    <input type="file" name="file_name">
-    <input type="submit">
-</form>
-</body>
-</html>
-```
-
-## 第十章 双亲委派
-
-### 基本概念
-
-class文件通过**类加载器**装载至JVM中的。为了防止内存中存放在多份同样的字节码，使用了双亲委派机制（它不会自己去尝试加载类，而是把请求委托给父加载器去完成，依次向上，避免重复加载字节码）
-
-JDK中的本地方法类一般由根加载器（Bootstrap loader）装载；JDK中内部实现的扩展类一般由扩展加载器（ExtClassLoader）实现装载；而程序中的类文件则由系统加载器（AppClassLoader）实现装载。
-
-<img src="../pics/JavaStrengthen/jvm/ClassLoader.jpg">
-
-### 打破双亲委派机制
-
-只要加载类的时候，不是从 App ClassLoader --> Ext ClassLoader --> BootStrap ClassLoader 这个顺序查找，就是打破了双亲委派机制。
-
-加载class核心的方法在LoaderClass类的loadClass方法上（双亲委派机制的核心实现），只要我们定义个 ClassLoader，重写 loadClass 方法（不按照往上开始寻找类加载器），那就算是打破双亲委派机制了。
-
-> **Tomcat打破双亲委派机制**
-
-我们部署传统javaweb项目是，把war包放到tomcat的webapp下，这意味着一个tomcat可以运行多个web应用程序；
-
-----
-
-假设有两个Web应用程序，它们都有一个类，叫做User，并且它们的类全限定名都一样，如都是 `com.yyy.User`，但是他们的具体实现是不一样的。那么tomcat如何保证它们是不会冲突的？**tomcat为每个Web应用创建一个类加载实例（WebAppClassLoader），该加载器重写了 loadClass 方法，优先加载当前应用目录下的嘞，如果当前找不到了，才一层一层往上找**，这样就做到了Web应用层级的隔离。
-
-----
-
-并不是Web应用程序下的所有依赖都需要隔离的，比如 Redis 就可以 Web 应用之间共享（有需要的话），因为如果版本相同，没必要每个Web应用程序都独自加载一份。具体做法是：Tomcat 在 WebAppClassLoader 上加了个父类加载器 （Shared ClassLoader），**如果 WebAppClassLoader 自身没有加载到某个类，就委托 SharedClassLoader 去加载（把需要应用程序之间需要共享的类放到一个共享目录下，Share ClassLoader 读共享目录的类即可**）。
-
-为了隔绝Web应用程序与Tomcat本身的类，又有类加载器（CatalinaClassLoader）来装载 Tomcat 本身的依赖。如果 Tomcat 本身的依赖和 Web 应用还需要共享，那么还有类加载器（CommonClassLoader）来装载而达到共享。各个类加载器的加载目录可以到 Tomcat 的 catalina.properties 配置文件上查看。
-
-----
-
-> Tomcat的类加载结构图
-
-<img src="../pics/JavaStrengthen/jvm/Tomcat_ClassLoader.jpg">
-
-> JDBC破坏了双亲委派？
-
-JDBC定义了接口，具体实现类由各个厂商进行实现。
-
-类加载的规则如下：如果一个类由类加载器A加载，那么这个类的依赖类也是由相同的类加载器加载。
-
-使用JDBC的时候，是使用 DriverManager 进而获取 Connection，DriverManager 在 java.sql 包下，显然是由 BootStrap 类加载器进行装载。当我们使用 DriverManager.getConnection() 时，得到的一定是厂商实现的类，**但 BootStrap ClassLoader 无法加载到各个厂商实现的类**，因为这些实现类没在 java 包中。DriverManager 的解决方案时 在 DriverManager 初始化的时候， 得到**线程上下文加载器**，去获取 Connection 的时候，是使用线程上下文加载器去加载 Connection 的，**而这里的线程上下文加载器实际上还是 App ClassLoader**，所以在获取 Connection 的时候，还是先找 Ext ClassLoader 和 BootStrap ClassLoader，只不过这两加载器肯定加载不到的，最终会由App ClassLoader进行加载！
-
-有人觉得本应由 BootStrao ClassLoader 进行加载的 却改成 线程上下文加载器加载 就觉得破坏了。
-
-有人觉得虽然改成了线程上下文加载器 但是依旧遵守 依次往上找父类加载器进行加载，都找不到时才由自己加载，认为**原则**上时没变的。
-
-不重要好吧！理解为什么重要！
-
-### 小结
-
-**前置知识**：JDK中默认类加载器有三个：AppClassLoader、Ext ClassLoader、BootStrap ClassLoader。AppClassLoader的父加载器为Ext ClassLoader、Ext ClassLoader的父加载器为BootStrap ClassLoader。这里的父子关系并不是通过继承实现的，而是组合。
-
-**什么是双亲委派机制**：加载器在加载过程中，先把类交由父类加载器进行加载，父类加载器没找到才由自身加载。
-
-**双亲委派机制目的**：为了防止内存中存在多份同样的字节码（安全）
-
-**类加载规则**：如果一个类由类加载器A加载，那么这个类的依赖类也是由「相同的类加载器」加载。
-
-**如何打破双亲委派机制**：自定义ClassLoader，重写loadClass方法（只要不依次往上交给父加载器进行加载，就算是打破双亲委派机制）
-
-**打破双亲委派机制案例**：Tomcat
-
-1. 为了Web应用程序类之间隔离，为每个应用程序创建WebAppClassLoader类加载器
-2. 为了Web应用程序类之间共享，把ShareClassLoader作为WebAppClassLoader的父类加载器，如果WebAppClassLoader加载器找不到，则尝试用ShareClassLoader进行加载
-3. 为了Tomcat本身与Web应用程序类隔离，用CatalinaClassLoader类加载器进行隔离，CatalinaClassLoader加载Tomcat本身的类
-4. 为了Tomcat与Web应用程序类共享，用CommonClassLoader作为CatalinaClassLoader和ShareClassLoader的父类加载器
-5. ShareClassLoader、CatalinaClassLoader、CommonClassLoader的目录可以在Tomcat的catalina.properties进行配置
-
-**线程上下文加载器**：由于类加载的规则，很可能导致父加载器加载时依赖子加载器的类，导致无法加载成功（BootStrap ClassLoader无法加载第三方库的类），所以存在「线程上下文加载器」来进行加载。
-
-## 第十一章 Java内存模型
-
-> Java内存模型概述
-
-Java的内存模型 Java Memory Model，简称JMM，本身是一种抽象的概念，实际上并不存在，它描述的是一组规则或规范，通过这组规范定义了程序中各个变量（包括实例字段，静态字段和构成数组对象的元素）的访问方式
-
-JMM关于同步的规定：
-
-- 线程解锁前，必须把共享变量的值刷新回主内存
-- 线程加锁前，必须读取主内存的最新值，到自己的工作内存
-- 加锁和解锁是同一把锁
-
->Java内存模型三大特性
-
-JMM的三大特性，volatile只保证了两个，即可见性和有序性，不满足原子性
-
-- 可见性
-- 原子性
-- 有序性
-
-### 为什么需要内存模型
-
-#### 背景
-
-多核计算机，每个核心都会有高速缓存。高速缓存的为了解决CPU与内存（主存）直接的速度差异，L1，L2缓存一般是【每个核心独占】一份的。L3缓存一般是多核共享的。
-
-为了让CPU提高运算效率，处理器可能会对代码进行【乱序执行】，即指令重排序，可以会议下计算机组成原理的流水线执行。
-
-计算机中的一些操作往往是非原子性的，如 i++ 在执行的时候需要多个指令才能完成 i++ 这个操作。在单线程下，是不会存在什么问题的，因为单线程意味着无法并发。且在单线程下，编译器 /runtime/ 处理器 必须遵守 as-if-serial 语义，即它们不会对数据**依赖关系的操作**做重排序
-
-> 缓存数据不一致
-
-多个线程同时修改 【共享变量】，CPU核心下的高速缓存是 【不共享】的，多个 cache 与内存直接的数据同部如何进行的？
-
-- 锁总线，锁数据传输
-- 缓存一致性协议（如MESI协议，M（Modified）E（Exclusive）S（Share）I（Invalid））
-- 锁总线开销太大了，一般是用缓存一致性协议，没办法的时候才会用锁总线。
-
-#### MESI协议
-
-MESI协议，M（Modified）E（Exclusive）S（Share）I（Invalid）
-
-缓存一致性协议锁的是==缓存行==进行加锁。**缓存行是高速缓存存储的最小单位。**
-
-> MESI原理（计组那块的知识）
-
-当每个 CPU 读取共享变量之前，会先识别数据的对象状态（修改、共享、独占、无效）。
-
-==独占==：说明 CPU 将要得到的变量数据是最新的，没有被其他 CPU 同时读取。
-
-==共享==：说明 CPU 将要得到的变量数据还是最新的，有其他 CPU 在读取，但是还没被修改。
-
-==修改==：说明当前 CPU 正在修改该变量的值，同时会向其他 CPU 发送该数据状态为 invalid（无效）的通知，得到其他 CPU 响应后（其他 CPU 将数据状态从共享（share）变成invilid（无效）），会当前 CPU 将高速缓存的数据写到主存，并把自己的状态从 modify 变成 exclusive。如果 CPU 发现数据是 invilid 则需要从主存重新读取最新的数据。
-
-MESI 协议做的就是判判断**对象状态**， 根据对象状态来采取不同的策略。在某个 CPU 在对数据进行修改时，需要**同步**通知其他 CPU ，表示这个数据被我修改了，你们不能用了。**对比锁总线，MESI协议的“锁粒度”更小，性能更高**。
-
-> CPU 优化
-
-同步，意味着等待，什么都做不了，浪费 CPU 资源。解决方案是把 同步 变成 异步。修改时同步告诉其他 CPU ，而现在则把最新修改的值写到 store buffer 中，并通知其他 CPU 记得要修改状态，随后 CPU 就直接返回做其他事了。等收到其他 CPU 发过来的响应消息，再将数据更新到高速缓存中。
-
-其他 CPU 接收到 invalid 通知时，也会把接收到的消息放入 invalid queue 中，只要写到 invalid queue 就会直接返回告诉修改数据的 CPU 已将状态置为 invalid。
-
-异步的问题在于：现在 CPU 修改为 A 值，写到 store buffer 了，CPU 可以做其他事，如果该 CPU 又 接收指令需要修改 A 值，但上一次修改的值 还在 store buffer 中，未修改至高速缓存。 所以 CPU 在读取的时候，需要去 store buffer 看看存不存在，存在则直接取，不存在才读主存的数据。
-
-> CPU 乱序执行
-
-如果是不同核心的CPU读它们共享的高速缓存，还是可能出现读旧值的问题。CPU1 修改了A值，把修改后值写到 store buffer 并通知CPU2 对该值 进行 invalid 操作，而 CPU2 可能还没收到 invalid 通知，就去做其他操作了，导致 CPU2 读到的还是旧值。这称之为 CPU 乱序执行。为了解决乱序问题，引出了**内存屏障**
-
-> 内存屏障
-
-内存屏障实际上是为了解决**异步优化**导致 **CPU乱序执行/缓存不及时可见** 的问题，解决方案就是把**异步优化禁用**了。
-
-内存屏障可分为：
-
-- 写屏障
-- 读屏障
-- 读写屏障
-
-屏障：操作数据时，往数据插入一条“特殊的指令”。只要遇见这条指令，那前面的操作都得【完成】。
-
-==写屏障==：CPU当发现写屏障指令时，会把该指令**之前**存在于 store Buffer 所有写指令**刷入高速缓存**。通过这种方式就**可以让CPU修改的数据可以马上暴露给其他 CPU**，达到写操作可见性的效果。
-
-==读屏障==：CPU 当发现读屏障指令时，会把该指令之前存在于 invalid queue 所有的指令都处理掉，通过这种方式就**可以确保当前CPU的缓存状态是准确的**，达到读操作一定是读取最新的效果。
-
-深入Linux内核架构一书中，读、写屏障的解释：
-
-- ==读屏障==：是读访问内存屏障。它保证 在屏障之后发出的任何读取操作执行之前，屏障之前发出的所有读取操作都已经完成。（**屏障内的所有操作完成了！然后才会执行屏障后的操作！**）
-- ==写屏障==：是写访问内存屏障。它保证 在屏障之后发出的任何写操作执行之前，屏障之前发出的所有写操作都已经完成。
-- 编译器在屏障之前发出的读写请求完 成之前，不会处理屏障之后的任何读写请求
-
-#### Java内存模型
-
-由于不同 CPU 架构的缓存体系不一样，缓存一致性协议不一样、重排序的策略不一样、所提供的内存屏障指令也有差异，为了简化 Java 开发人员的工作，==Java 封装了一套规范：Java内存模型==
-
-Java内存模型希望屏蔽各种硬件和操作系统的访问差异，保证了Java程序在各种平台下对内存的访问都能得到一致的效果。目的是解决多线程存在的原子性、可见性（缓存一致性）以及有序性的问题。
-
-#### 小结
-
-- 并发问题产生的三大根源是「可见性」「有序性」「原子性」
-
-- 可见性：CPU架构下存在高速缓存，每个核心下的L1/L2高速缓存不共享（不可见）
-
-- 有序性：主要有三部分可能导致打破（编译器和处理器可以在不改变「单线程」程序语义的情况下，可以对代码语句顺序进行调整重新排序
-
-- - 编译器优化导致重排序（编译器重排）
-    - 指令集并行重排序（CPU原生重排）
-    - 内存系统重排序（CPU架构下很可能有store buffer /invalid queue 缓冲区，这种「异步」很可能会导致指令重排）
-
-- 原子性：Java的一条语句往往需要多条 CPU 指令完成(i++)，由于操作系统的线程切换很可能导致 i++ 操作未完成，其他线程“中途”操作了共享变量  i ，导致最终结果并非我们所期待的。
-
-- 在CPU层级下，为了解决「缓存一致性」问题，有相关的“锁”来保证，比如“总线锁”和“缓存锁”。
-
-- - 总线锁是锁总线，对共享变量的修改在相同的时刻只允许一个CPU操作。
-    - 缓存锁是锁缓存行(cache line)，其中比较出名的是MESI协议，对缓存行标记状态，通过“同步通知”的方式，来实现(缓存行)数据的可见性和有序性
-    - 但“同步通知”会影响性能，所以会有内存缓冲区(store buffer/invalid queue)来实现「异步」进而提高CPU的工作效率
-    - 引入了内存缓冲区后，又会存在「可见性」和「有序性」的问题，平日大多数情况下是可以享受「异步」带来的好处的，但少数情况下，需要强「可见性」和「有序性」，只能"禁用"缓存的优化。
-    - “禁用”缓存优化在CPU层面下有「内存屏障」，读屏障/写屏障/全能屏障，本质上是插入一条"屏障指令"，使得缓冲区(store buffer/invalid queue)在屏障指令之前的操作均已被处理，进而达到 读写 在CPU层面上是可见和有序的。
-
-- 不同的CPU实现的架构不一样，Java为了屏蔽硬件和操作系统访问内存的各种差异，提出了「Java内存模型」的规范，保证了Java程序在各种平台下对内存的访问都能得到一致效果。
-
-### 从源码到执行
-
-> 流程概述
-
-编译--->加载--->解释--->执行
-
-- 编译：将源码文件编译成JVM可解释的class文件。会对程序做语法分析、语义分析、注解处理等操作，最后才生成字节码文件。
-    - 典型的处理有：泛型擦出，Java的泛型擦出就是在 编译 阶段执行的。
-- 加载：将编译后的class文件加载到JVM中。
-    - 加载步骤：装载--->连接--->初始化
-
-#### 加载
-
-> 装载
-
-- **装载时机**：为了节省内存的开销，不会一次把所有的类都装载到JVM，而是等到 有需要 的时候才进行装载。（如new 反射）
-- **装载发生**：class文件是通过 类加载器 加载到 JVM中，为防止内存中出现多分相同的字节码，使用了双亲委派机制（不会自己去尝试加载这个类，而是把请求委托给父加载器去完成，依次向上）
-- **装载规则**：JDK中的本地犯法类一般由根加载器（Bootstrao loader）装载，JDK中内部实现的扩展类一般由扩展加载器（ExtClassLoader）实现装载，而程序中的类文件则由系统加载器（AppClassLoader）实现装载。
-
-查找并加载类的二进制数据，在JVM堆中创建一个java.lang.Class类的对象，并将类相关的信息存储在JVM方法区中。
-
-装载后，class文件就装载到了JVM中，并创建出了对应的Class对象和类信息，并这Class对象和类信息存储到了方法区中。
-
-> 连接
-
-对class的信息进行验证、为类变量分配内存空间并对其赋默认值。
-
-连接的细化步骤为：验证--->准备--->解析
-
-- 验证：验证类是否符合 Java 规范 和 JVM 规范。
-- 准备：为类的静态变量分配内存，初始化为系统的初始值。
-- 解析：将**符号引用**转为直接引用的过程。（什么是符号引用？）
-
-通过连接，对class信息做了校验并分配了内存空间和默认值。
-
-> 初始化
-
-为类的静态变量赋予正确的初始值。
-
-过程：收集 class 的静态变量、静态代码块、静态方法至clinit() 方法，随后从上往下开始执行（clinit()方法？）
-
-如果 **实例化对象** 则会调用方法对实例变量进行初始化，并执行对应的构造方法内的代码。（==这块感觉写到有问题，查查资料==）
-
-#### 解释
-
-初始化完成后，执行某个类的方法时，会找到对应方法的字节码信息。然后交由解释器去将这些字节码信息解释成系统可以识别的指令。
-
-字节码变成机器码的方式
-
-- 解释器
-- JIT
-
-JVM对热点代码做编译，非热点代码直接进行解释。运行频繁的数据会被解释为热点代码。
-
-热点代码使用热点探测来检测是否为热点代码。热点探测一般两种方式：
-
-- 计数器 
-- 抽样
-
-HotSpot使用的是 计数器 的方式进行探测，为每个方法准备了两类计数器：方法调用计数器和回边计数器。这两个计数器都有一个确定的阈值，当计数器超过阈值溢出了，就会触发JIT编译。即时编译器把热点方法的指令码保存起来，下次执行的时候就无需重复的进行解释，直接执行缓存的机器语言。
-
-**执行次数大于100万次的代码会被编译成热点代码**
-
-#### 执行
-
-操作系统把解释器解析出来的指令码，调用系统的硬件执行最终的程序指令。
-
-#### 小结
-
-- Java跨平台因为有JVM屏蔽了底层操作系统
-
-- Java源码到执行的过程，从JVM的角度看可以总结为四个步骤：编译->加载->解释->执行
-
-- - 「编译」经过 语法分析、语义分析、注解处理 最后才生成会class文件
-    - 「加载」又可以细分步骤为：装载->连接->初始化。装载则把class文件装载至JVM，连接则校验class信息、分配内存空间及赋默认值，初始化则为变量赋值为正确的初始值。连接里又可以细化为：验证、准备、解析
-    - 「解释」则是把字节码转换成操作系统可识别的执行指令，在JVM中会有字节码解释器和即时编译器。在解释时会对代码进行分析，查看是否为「热点代码」，如果为「热点代码」则触发JIT编译，下次执行时就无需重复进行解释，提高解释速度
-    - 「执行」调用系统的硬件执行最终的程序指令
-
-  <img src="../pics/JavaStrengthen/jvm/From_Java2Class.jpg">
-
-### Java内存模型
-
-ava内存模型希望屏蔽各种硬件和操作系统的访问差异，保证了Java程序在各种平台下对内存的访问都能得到一致的效果。目的是解决多线程存在的原子性、可见性（缓存一致性）以及有序性的问题。==Java 内存模型时一种规范，JVM会实现这种规范。==
-
-> 主要内容概述
-
-- Java 内存模型的抽象结构
-- happen-before 规则
-- 对 volatile 内存语义的探讨
-
-> Java 内存模型的抽象结构
-
-Java 内存模型定义了：Java 线程对内存数据进行交互的规范。
-
-线程之间的 共享变量 存储在 主内存 中，每个线程都有自己私有的 本地内存，本地内存 存储了该线程以 读\写 共享变量的副本。
-
-本地内存是 Java 内存模型的抽象概念，并不是真实存在的。
-
-<img src="../pics/JavaStrengthen/jvm/JMM.jpg">
-
-Java 内存模型规定了：线程对变量的所有操作都必须在 **本地内存** 进行，**不能直接读写主内存** 的变量。
-
-Java内存模型定义了 8 种 操作来完成 变量如何从主内存到本地内存，以及变量如何从本地内存到主内存。分别是 read/load/use/assign/store/writer/lock/unlock操作。
-
-<img src="../pics/JavaStrengthen/jvm/eight_op.jpg">
-
-> happen-before
-
-happen-before也是一套规则。目的是阐述“操作之间”的内存“可见性”。在happen-before规则下，我们写的代码只要前一个操作的结果对后续操作是可见的，是不会发生重排序的。
-
-> volatile
-
-- 有序性
-- 可见性
-
-在volatile前后加了内存屏障，使得编译器和CPU无法进行重排序，并且写 volatile 变量对其他线程可见。
-
-在汇编层面，是通过 lock 前缀指令来实现的（**实现什么？没讲清楚，黄俊说的是实现的内存屏障？**），而不是各种 fence 指令（因为大部分平台都支持 lock 指令，而 fence 指令 是 x86 平台的）
-
-```cpp
-// 内存屏障的实现
-#ifdef AMD64
-  __asm__ volatile ("movq 0(%%rsp), %0" : "=r" (local_dummy) : : "memory");
-#else
-  __asm__ volatile ("movl 0(%%esp),%0" : "=r" (local_dummy) : : "memory");
-#endif // AMD64
-```
-
-lock指令能保证：禁止 CPU 和 编译器 的重排序（保证了有序性）、保证 CPU 写核心的指令可以立即生效且其他核心的缓存数据失效（保证了可见性）
-
-## 第十二章 JVM内存结构
-
-### 概述
-
-JVM的内存结构，往往指的就是 JVM 定义的 运行时数据区域。
-
-==JVM内存结构分为5块：==方法区、堆、程序计数器、虚拟机栈、本地方法栈。=
-
-<img src="../pics/JavaStrengthen/jvm/JVM_Memory.jpg">
-
-### 程序计数器
-
-一块较小的内存空间，当前线程所执行字节码的行号指示器，字节码解释器工作时就是通过改变这个计数器的值来选取下一条需要执行的字节码指令。程序计数器时程序控制流的指示器，分支、循环、跳转、异常处理、线程回复等基础功能都依赖于程序计数器完成。
-
-可以理解为计算机组成原理中的程序计数器。指向下一条需要执行的指令。**如果线程正在执行的是一个 Java 方法，这个计数器记录的是正在执行的虚拟机字节码指令的地址**；**如果正在执行的是本地方法，这个计数器值则应为空。**
-
-每个线程都需要一个独立的程序计数器，各条线程之间计数器互不影响，独立存储。程序计数器这块区域为线程私有，是线程安全的。
-
-### 虚拟机栈
-
-描述的是 Java 方法执行的线程内存模型。每一条 Java 虚拟机线程都有自己私有的 Java 虚拟机栈，这个栈与线程同时创建，**每次方法调用都会创建一个 栈帧**。
-
-==每个栈帧会包含几块内容：局部变量表、操作时栈、动态连接和返回地址==
-
-Java 虚拟机栈的作用与传统语言中的栈非常类似，用于存储局部变量与一些尚未算好的结果。
-
-<img src="../pics/JavaStrengthen/jvm/JVM_Stack.jpg">
-
-### 本地方法栈
-
-与虚拟机栈所发挥的作用是非常相似的，其区别只是虚拟机栈为虚拟机执行 Java 方法（也就是字节码）服务，而本地方法栈则是为虚拟机使用到本地方法服务。
-
-==HotSpot VM 直接把虚拟机栈和本地方法栈合二为一了。==
-
-### 方法区
-
-> **Java虚拟机规范中的解释：**
-
-方法区是可供各个线程共享的运行时内存区域。**存储了每一个类的结构信息，如：运行时常量池、字段和方法数据、构造函数和普通方法的字节码内容，还包括一些在类、实例、接口初始化时用到的特殊方法。**虚拟机可以自行选在在不在方法区实现垃圾回收算法。
-
-> **HotSpot虚拟机**
-
-在HotSpot虚拟机，会常常提到 **永久代** 这个词。==HotSpot虚拟在 JDK8前 用 **永久代**实现了**方法区**==，而很多其他厂商的虚拟机其实是没有永久代的概念的。Java 虚拟机把方法区描述为堆的一个逻辑部分，但是它有一个别名叫作“非堆”，目的是为了与 Java 堆区分开来。
-
-采用 **永久代** 实现 **方法区** 这种设计导致了 Java 应用 更容易遇到内存溢出的问题（永久代有 -XX:MaxPermSize 的上限，即使不设置也有默认大小，而J9 和 JRockit 只要没有触碰到进程可用内存的上限，如32位系统位4GB，就不会出现问题。）在JDK6 的时候 HotSpot 开发团队就有放弃永久代，逐步改为本地内存来实现方法区的计划了。
-
-方法区主要用来存放已被虚拟机加载的“类相关信息”：包括类信息、常量池。
-
-- 类信息：类的版本、字段、方法、接口和父类等信息
-- 常量池：静态常量池 和 运行时常量池（这块不熟悉）
-
-常量池：
-
-- 静态常量池：存储的是 **字面量** 以及 **符号引用** 等信息，静态常量池也包括了我们说的 **字符串常量池**
-- 运行时常量池：存储的是 **类加载** 时生成的 **直接引用** 等信息
-
-但自从在 **JDK7** 以后，就已经把 **运行时常量池** 和 **静态常量池** 转移到了 **堆** 内存中进行存储。**到了JDK 8，终于完全废弃了永久代的概念，改用与 JRockit、J9 一样在本地内存中实现的元空间（Meta-space）来代替，把 JDK 7 中永久代还剩余的内容（主要是类型信息）全部移到元空间中。**对于 **物理分区** 来说 **运行时常量池** 和 **静态常量池** 就属于堆。==（逻辑分区和物理实际存储的位置是不一样的）==
-
-元空间存储不在虚拟机中，而是使用本地内存，JVM 不会再出现方法区的内存溢出，以往永久代经常因为内存不够用导致OOM异常。
-
-<img src="../pics/JavaStrengthen/jvm/Method_Area.jpg">
-
-> **小结**
-
-HotSpot VM：HotSpot VM JDK7 以前永久代实现的方法区。JDK7 以前常量池在永久代（方法区）中，永久代容易OOM，JDK7 把常量池从 永久代（方法区） 移动到了 JVM 堆中。 ==JDK8开始，不在用永久代实现方法区了，而是用元空间实现方法区，永久代中剩余的内容（主要是类型信息）被移到了元空间。==
-
-### 堆
-
-Java堆是被所有线程共享的一块内存区域，在虚拟机启动时创建。此内存区域的唯一目的就是存放对象实例，Java世界里“几乎”所有的对象实例都在这里分配内存。
-
-堆涉及到了垃圾回收。以往的垃圾回收多数是基于“经典分代”来设计，需要新生代、老年代收集器搭配才能工作；HotSpot里面也出现了不采用分代设计的新垃圾收集器。现在以传统的 分代 思想介绍下堆的划分。
-
-**堆**被划分为新时代和老年代，新时代又被进一步划分为Eden和Survivor区，Surivivor由From Survivor和To Survivor组成。
-
-<img src="../pics/JavaStrengthen/jvm/Heap_Split.jpg">
-
-**一般情况下 Eden：from：to = 8：1：1**
-
-### 小结
-
-**JVM内存结构组成**：JVM内存结构又称为「运行时数据区域」。主要有五部分组成：虚拟机栈、本地方法栈、程序计数器、方法区和堆。其中方法区和堆是线程共享的。虚拟机栈、本地方法栈以及程序计数器是线程隔离的。
-
-# 第四部分 源码阅读
-
-- 修改idea配置
-    - Build，Execution，Deployment --> Debugger --> Stepping 的Do not step into the classes不要勾选
-
-- 把jdk的源码，解压，然后放在项目的目录下，不要放在src下就行，非项目目录也可以，然后idea源码关联改成我们解压后的那些文件，这样就可以修改源码注释了。
-
-----
-
-<span style="color:red">**JDK8核心源码目录说明**</span>
-
-- java.applet：applet所必须的类
-- java.awt：创建用户界面和绘制图形图像的所有类
-- java.beans：包含与开发javabeans有关的类
-
-- <span style="color:red">**java.lang：**</span>Java基础类【类装载（Class等）】、反射、字符串、线程类
-- java.math：主要是BigInteger、BigDecimal这两个的源码
-- java.net：网络应用出现提供类（阻塞式）
-- <span style="color:red">**java.nio：**</span>多路的、无阻塞的I/O
-- java.rmi：远程方法调用相关
-- java.security：安全框架类和接口
-- java.sql：操作数据库，闲得无聊可以看看
-- <span style="color:red">**java.util：**</span>重要的有：集合、JUC（Atomic、Lock、concurrent）、Stream（函数式操作）、工具类
-- java.text：处理文本、日期、数字和消息的类和接口（常见DataFormat、SimpleDataFormat）
-- java.time：日期时间工具库
-- javax.java：java扩展包，为了保持版本兼容，但有了更好的解决方案。如swing
-- launcher：和底层交互的c代码
-- org：其他企业组织提供的java类库，大部分不是oracle公司提供的。如w3c提供的对xml解析类和接口
-- com.sun：hotspot虚拟机中java.* 和javax.*的实现类，其他jdk中没有，这些类可能不向后兼容。
-
-Java native方法是用c c++实现的，无法查看到代码~要看的话去下open jdk的源码
-
-<span style="color:red">**用open jdk的源码。**</span>
-
-- corba：不流行的多语言、分布式通讯接口
-- hotspot：Java虚拟机
-- hotspot-cpu：CPU相关代码（汇编器、模版解释器、部分runtime函数）
-- hotspot-os：操作系统相关代码
-- hotspot-os_cpu：操作系统+CPU的代码
-- hotspot-share：平台无关的通用代码
-- jaxp：xml处理
-- jaxws：一组XML web services的Java API
-- <span style="color:green">**jdk**</span>：Java开发工具包（share\class Java的实现 share\native目录里的是C++的实现）
-- langtools：Java语言工具
-- nashorn：JVM上的JavaScript运行时
-
----
-
-https://mp.weixin.qq.com/s/2yke6e-bfEYGtTHxH-31HQ
-
-
 
